tests/baselines/reference/classExtendsMultipleBaseClasses.errors.txt
==== tests/cases/compiler/classExtendsMultipleBaseClasses.ts (1 errors) ====
    class A { }
    class B { }
    class C extends A,B { }
            ~~~~~~~~~~~
!!! error TS1026: Classes can only extend a single class.